testsuite/tests/th/T14032e.hs
{-# LANGUAGE TemplateHaskell #-}
module T14032e where

$([d| infix 5 :*:
      data a :*: b = a :*: b
    |])
